fix ellipse text truncate by css

--- a/static/css/rocketchat.css
+++ b/static/css/rocketchat.css
@@ -240,6 +240,9 @@
   float: left;
   height: 100%;
   margin-right: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .ep_rocketchat_onlineUsersList{
   display: flex;
